--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-23.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-23.yml
@@ -38,6 +38,8 @@ jobs:
           mkdir deploy
           cp -r ./.next/standalone/. ./deploy
           cp -r ./.next/static/. ./deploy/.next/static
+          cp -r ./public ./deploy/public
+          cp -r ./node_modules ./deploy/node_modules
 
       - name: Zip artifact for deployment
         run: zip release.zip ./deploy -r #3
